feat(app): make the warning about appeal messages more clear fixes seiama/sentinel-issues#4